--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <p>
           Welcome to my portfolio! I’m Maroof, a tech enthusiast who crafts seamless web experiences with Django, Flask, and PHP while diving deep into the world of Machine Learning and Data Science. I believe in turning ideas into reality through code, innovation, and problem-solving. Let’s build something extraordinary together        </p>
         <div class="social-media">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="https://github.com/maroof2424/"><i class="bx bxl-github"></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/maroofiums/"><i class="bx bxl-instagram"></i></a>
           <a href="#"><i class="bx bxl-youtube"></i></a>
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/muhammad-maroof-833739338/"><i class="bx bxl-linkedin"></i></a>
         </div>
         <a href="assets/Resume.pdf" class="btn">Download CV</a>
       </div>
