--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me!</span></h2>
 
-    <form action="mailto:varunmg2102@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:maroof96965@gmail.com" method="post" enctype="text/plain">
       <div class="input-box">
         <input type="text" placeholder="Full Name" />
         <input type="email" placeholder="Email Address" />
