--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
         reality through code, innovation, and problem-solving. Let’s build something extraordinary together </p>
       <div class="social-media">
         <a href="https://github.com/maroof2424/"><i class="bx bxl-github"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.instagram.com/maroofiums/"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-youtube"></i></a>
         <a href="https://www.linkedin.com/in/muhammad-maroof-833739338/"><i class="bx bxl-linkedin"></i></a>
       </div>
       <a href="assets/Resume.pdf" class="btn">Download CV</a>
@@ -88,22 +86,32 @@
 
   <!-- certficate -->
 
-  <section class="certificates" id="certificates">
-    <h2 class="heading">My <span>Certificates</span></h2>
-    <div class="scroll-container">
-      <div class="image-wrapper">
-        <img src="images/certificate1.jpg" alt="Certificate 1" class="image">
-        <img src="images/certificate2.jpg" alt="Certificate 2" class="image">
-        <img src="images/certificate3.jpg" alt="Certificate 3" class="image">
-        <img src="images/certificate4.jpg" alt="Certificate 4" class="image">
-        <img src="images/certificate5.jpg" alt="Certificate 5" class="image">
-        <img src="images/certificate6.jpg" alt="Certificate 6" class="image">
-        <img src="images/certificate7.jpg" alt="Certificate 7" class="image">
-        <img src="images/certificate8.jpg" alt="Certificate 8" class="image">
-        <img src="images/certificate9.jpg" alt="Certificate 9" class="image">
-      </div>
+<section class="certificates" id="certificates">
+  <h2 class="heading">My <span>Certificates</span></h2>
+  <div class="scroll-container">
+    <div class="image-wrapper">
+      <img src="images/certificate1.jpg" alt="Certificate 1" class="image">
+      <img src="images/certificate2.jpg" alt="Certificate 2" class="image">
+      <img src="images/certificate3.jpg" alt="Certificate 3" class="image">
+      <img src="images/certificate4.jpg" alt="Certificate 4" class="image">
+      <img src="images/certificate5.jpg" alt="Certificate 5" class="image">
+      <img src="images/certificate6.jpg" alt="Certificate 6" class="image">
+      <img src="images/certificate7.jpg" alt="Certificate 7" class="image">
+      <img src="images/certificate8.jpg" alt="Certificate 8" class="image">
+      <img src="images/certificate9.jpg" alt="Certificate 9" class="image">
+      <!-- Duplicate images for seamless looping -->
+      <img src="images/certificate1.jpg" alt="Certificate 1" class="image">
+      <img src="images/certificate2.jpg" alt="Certificate 2" class="image">
+      <img src="images/certificate3.jpg" alt="Certificate 3" class="image">
+      <img src="images/certificate4.jpg" alt="Certificate 4" class="image">
+      <img src="images/certificate5.jpg" alt="Certificate 5" class="image">
+      <img src="images/certificate6.jpg" alt="Certificate 6" class="image">
+      <img src="images/certificate7.jpg" alt="Certificate 7" class="image">
+      <img src="images/certificate8.jpg" alt="Certificate 8" class="image">
+      <img src="images/certificate9.jpg" alt="Certificate 9" class="image">
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- services -->
 
